Added RandomGameMapFactory, picking map params at the start of a game. Added guice dependency injection. Some refactor.